Fix bird animations so that they don't get stuck

--- a/main.css
+++ b/main.css
@@ -68,30 +68,30 @@ h1 {
 	animation-iteration-count: infinite;
 }
 .bird--one {
-    animation-duration: 17s;
-    animation-delay: 0s;
+    animation-duration: 25s;
+    animation-delay: -1s;
     animation-name: fly-right-one;
   }
 .bird--two {
-    animation-duration: 18s;
+    animation-duration: 26s;
     animation-delay: 1s;
     animation-name: fly-right-two;    
 }
 .bird--three {
-    animation-duration: 16.6s;
-    animation-delay: 13.5s;
+    animation-duration: 23s;
+    animation-delay: 4.5s;
     animation-name: fly-right-one;
 }
 .bird--four {
-    animation-duration: 18s;
-    animation-delay: 13.25s;
+    animation-duration: 24s;
+    animation-delay: 6.5s;
     animation-name: fly-right-two;    
 }
 .bird-container {
 	position: absolute;
 	top: -40%;
     left: -50%;
-    right:-40%;
+    right:0%;
 	/* transform: scale(0) translateX(-10vw); */
     will-change: transform;
     /* animation-name: fly-right-one; */
@@ -114,7 +114,7 @@ h1 {
 	}
 	
 	10% {
-		transform: translateY(2vh) translateX(10vw) scale(0.4);
+		transform: translateY(-4vh) translateX(10vw) scale(0.4);
 	}
 	
 	20% {
@@ -122,7 +122,7 @@ h1 {
 	}
 	
 	30% {
-		transform: translateY(4vh) translateX(50vw) scale(0.6);
+		transform: translateY(-2vh) translateX(50vw) scale(0.6);
 	}
 	
 	40% {
@@ -130,15 +130,27 @@ h1 {
 	}
 	
 	50% {
-		transform: translateY(0vh) translateX(90vw) scale(0.6);
+		transform: translateY(-2vh) translateX(90vw) scale(0.6);
 	}
 	
 	60% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
+		transform: translateY(2vh) translateX(110vw) scale(0.6);
+    }
+    
+    70% 
+    {
+		transform: translateY(-2vh) translateX(130vw) scale(0.6);
 	}
-	
+    80% 
+    {
+		transform: translateY(1vh) translateX(150vw) scale(0.6);
+    }
+    90% 
+    {
+		transform: translateY(-1vh) translateX(170vw) scale(0.6);
+	}
 	100% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
+		transform: translateY(2vh) translateX(190vw) scale(0.6);
 	}
 	
 }
@@ -146,35 +158,47 @@ h1 {
 @keyframes fly-right-two {
 	
 	0% {
-		transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+		transform: scale(0.3) translateX(-10vw);
 	}
 	
 	10% {
-		transform: translateY(0vh) translateX(10vw) scale(0.4);
+		transform: translateY(-4vh) translateX(10vw) scale(0.4);
 	}
 	
 	20% {
-		transform: translateY(-4vh) translateX(30vw) scale(0.6);
+		transform: translateY(4vh) translateX(30vw) scale(0.5);
 	}
 	
 	30% {
-		transform: translateY(1vh) translateX(50vw) scale(0.45);
+		transform: translateY(-2vh) translateX(50vw) scale(0.6);
 	}
 	
 	40% {
-		transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+		transform: translateY(2vh) translateX(70vw) scale(0.6);
 	}
 	
 	50% {
-		transform: translateY(0vh) translateX(90vw) scale(0.45);
+		transform: translateY(-2vh) translateX(90vw) scale(0.6);
 	}
 	
-	51% {
-		transform: translateY(0vh) translateX(110vw) scale(0.45);
+	60% {
+		transform: translateY(2vh) translateX(110vw) scale(0.6);
+    }
+    
+    70% 
+    {
+		transform: translateY(-2vh) translateX(130vw) scale(0.6);
 	}
-	
+    80% 
+    {
+		transform: translateY(2vh) translateX(150vw) scale(0.6);
+    }
+    90% 
+    {
+		transform: translateY(-1vh) translateX(170vw) scale(0.6);
+	}
 	100% {
-		transform: translateY(0vh) translateX(110vw) scale(0.45);
+		transform: translateY(2vh) translateX(190vw) scale(0.6);
 	}
 	
 }
